Actions
Bug #9615
closedloader: cstyle fixes for some common files
Start date:
2018-06-16
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit d66a72cfe0bf6d9ab9725f0d0cb1f38dbcc0ac49
commit d66a72cfe0bf6d9ab9725f0d0cb1f38dbcc0ac49 Author: Toomas Soome <tsoome@me.com> Date: 2018-07-18T14:07:14.000Z 9615 loader: cstyle fixes for some common files Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Ken Mays <kmays2000@gmail.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions